--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                                     <span class="list-dot bg_blue"></span>“客户至上”是迅捷搬家一直坚持的信念，对于客户贵重的托运物品更是加倍细心
                                 </li>
                                 <li>
-                                    <span class="list-dot bg_blue"></span>搬家服务、IKEA提货、IKEA代买、机场接送、寄售二手家具、宽带安装，为您搬家提供一条龙服务
+                                    <span class="list-dot bg_blue"></span>搬家服务、IKEA提货、IKEA代买、机场接送、寄售二手家具、货物运输、城际速递，为您搬家提供一条龙服务
                                 </li>
                                 <li>
                                     <span class="list-dot bg_blue"></span>秉持诚信，准时，安全，负责的原则竭诚为您服务。一口价服务，绝无任何隐藏费用！！保证准时安全！！
@@ -123,6 +123,9 @@
                                 </li>
                                 <li>
                                     <span class="list-dot bg_pur"></span>行李寄存：小件每件5刀一周 大件每件10刀一周。
+                                </li>
+                                <li>
+                                    <span class="list-dot bg_pur"></span>货物运输、城际速递请电话咨询。
                                 </li>
 
                             </ul>
